[package]
name = "orm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.20", features = ["macros", "rt-multi-thread"] }

[dependencies.sea-orm]
version = "0.11.3"
features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"]
default-features = false
