[package]
name = "orm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [".", "migration", "entity"]

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }
tokio = { version = "1.28.2", features = ["full"] }

[dependencies.sea-orm]
version = "^0"

features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"]
default-features = false
